--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -61,5 +61,5 @@ jobs:
    - name: Release
      env:
        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-       run: heroku container:push ${{ kmisoibkr }} web
-     run: heroku container:release -a ${{ kmisoibkr }} web
+       run: heroku container:push kmisoibkr web
+     run: heroku container:release -a kmisoibkr web
