--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -56,7 +56,7 @@ jobs:
      with:
        context: .
        push: true
-       tags: registry.heroku.com/kmisoib/web
+       tags: registry.heroku.com/kmisoibkr/web
 
    - name: Release
      env:
