--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,6 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.5.6'
-    implementation('org.hibernate:hibernate-validator:7.0.1.Final')
-    developmentOnly 'org.springframework.boot:spring-boot-devtools:2.5.6'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
 }
 
@@ -27,7 +25,7 @@ test {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'kr.kmisoib.kmisoib_kr.KmisoibKrApplication.java'
+                'Main-Class': 'kr.kmisoib.kmisoib_kr.KmisoibKrApplication'
         )
     }
 }
